--- a/SLBr/Resources/NewTab.html
+++ b/SLBr/Resources/NewTab.html
@@ -50,11 +50,9 @@ ul.nav > li > a {
             <div class="Center" style="padding-bottom: 25px;">
                 <img class="Center SLBrIcon" style="user-select: none;" src="./SLBr.ico" width="100" height="100" />
             </div>
-            <div class="Search">
-                <div class="SearchInput">
-                    <span data-title="Search" class="material-icons" style="user-select: none; font-family: 'Segoe Fluent Icons'; font-size: 20px; color: darkgray;"></span>
-                    <input type="text" id="SearchField" autocomplete="off" />
-                </div>
+            <div class="SearchInput">
+                <span data-title="Search" class="font-icon"></span>
+                <input type="text" id="SearchField" autocomplete="off" />
             </div>
             <div class="Center">
                 <ul class="nav">
