--- a/SLBr/Resources/Downloads.html
+++ b/SLBr/Resources/Downloads.html
@@ -152,13 +152,13 @@ Use of this source code is governed by a GNU license that can be found in the LI
                 else if (filename.endsWith(".blend") || filename.endsWith(".obj") || filename.endsWith(".fbx") || filename.endsWith(".max") || filename.endsWith(".stl") || filename.endsWith(".x3d") || filename.endsWith(".3ds") || filename.endsWith(".dae") || filename.endsWith(".glb") || filename.endsWith(".gltf") || filename.endsWith(".ply"))
                     newDownload.querySelector("p.list_icon").textContent = "\uF158";
                 else if (filename.endsWith(".mp3") || filename.endsWith(".mp2"))
-                    newDownload.querySelector("p.list_icon").textContent = "\uEC4F";
+                    newDownload.querySelector("p.list_icon").textContent = "\uEA69";
                 else if (filename.endsWith(".mp4") || filename.endsWith(".avi") || filename.endsWith(".ogg") || filename.endsWith(".webm") || filename.endsWith(".mov") || filename.endsWith(".mpej") || filename.endsWith(".wmv") || filename.endsWith(".h264") || filename.endsWith(".mkv"))
                     newDownload.querySelector("p.list_icon").textContent = "\uE786";
                 else if (filename.endsWith(".pdf"))
                     newDownload.querySelector("p.list_icon").textContent = '\uEA90';
                 else if (filename.endsWith(".png") || filename.endsWith(".jpg") || filename.endsWith(".jpeg") || filename.endsWith(".avif") || filename.endsWith(".svg") || filename.endsWith(".webp") || filename.endsWith(".jfif") || filename.endsWith(".bmp"))
-                    newDownload.querySelector("p.list_icon").textContent = '\uEA69';
+                    newDownload.querySelector("p.list_icon").textContent = '\uE91B';
 
                 progress = "(" + item.PercentComplete + "%)";
                 if (item.PercentComplete > 0)
@@ -182,7 +182,7 @@ Use of this source code is governed by a GNU license that can be found in the LI
                     else if (filename.endsWith(".blend") || filename.endsWith(".obj") || filename.endsWith(".fbx") || filename.endsWith(".max") || filename.endsWith(".stl") || filename.endsWith(".x3d") || filename.endsWith(".3ds") || filename.endsWith(".dae") || filename.endsWith(".glb") || filename.endsWith(".gltf") || filename.endsWith(".ply"))
                         newDownload.querySelector("p.list_icon").textContent = "\uF158";
                     else if (filename.endsWith(".mp3") || filename.endsWith(".mp2"))
-                        newDownload.querySelector("p.list_icon").textContent = "\uEC4F";
+                        newDownload.querySelector("p.list_icon").textContent = "\uEA69";
                     else if (filename.endsWith(".mp4") || filename.endsWith(".avi") || filename.endsWith(".ogg") || filename.endsWith(".webm") || filename.endsWith(".mov") || filename.endsWith(".mpej") || filename.endsWith(".wmv") || filename.endsWith(".h264") || filename.endsWith(".mkv"))
                         newDownload.querySelector("p.list_icon").textContent = "\uE786";
                     else if (filename.endsWith(".pdf"))
