--- a/SLBr/Resources/NewTab.html
+++ b/SLBr/Resources/NewTab.html
@@ -58,47 +58,47 @@ ul.nav > li > a {
                 <ul class="nav">
                     <li>
                         <a data-title="YouTube" href="https://www.youtube.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://youtube.com&size=32" alt="YouTube" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://www.youtube.com/favicon.ico" alt="YouTube" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Outlook" href="https://www.outlook.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://outlook.live.com/mail&size=32" alt="Outlook" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://outlook.live.com/mail/favicon.ico" alt="Outlook" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Gmail" href="https://www.gmail.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://www.gstatic.com/images/branding/product/2x/gmail_2020q4_32dp.png" alt="Gmail" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://ssl.gstatic.com/ui/v1/icons/mail/rfr/gmail.ico" alt="Gmail" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Stack Overflow" href="https://www.stackoverflow.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://stackoverflow.com&size=32" alt="Stack Overflow" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://cdn.sstatic.net/Sites/stackoverflow/Img/favicon.ico" alt="Stack Overflow" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Facebook" href="https://www.facebook.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://facebook.com&size=32" alt="Facebook" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://www.facebook.com/favicon.ico" alt="Facebook" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Twitter" href="https://www.twitter.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://twitter.com&size=32" alt="Twitter" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://abs.twimg.com/favicons/twitter.3.ico" alt="Twitter" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Reddit" href="https://www.reddit.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://reddit.com&size=32" alt="Reddit" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://www.redditstatic.com/shreddit/assets/favicon/64x64.png" alt="Reddit" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Amazon" href="https://www.amazon.com" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://amazon.com&size=32" alt="Amazon" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://www.amazon.com/favicon.ico" alt="Amazon" width="60%" height="60%" />
                         </a>
                     </li>
                     <li>
                         <a data-title="Wikipedia" href="https://www.wikipedia.org" class="Center">
-                            <img style="user-select: none; border-radius: 5px;" src="https://t1.gstatic.com/faviconV2?client=SOCIAL&type=FAVICON&fallback_opts=TYPE,SIZE,URL&url=https://wikipedia.com&size=32" alt="Wikipedia" width="60%" height="60%" />
+                            <img style="user-select: none; border-radius: 5px;" src="https://www.wikipedia.org/static/favicon/wikipedia.ico" alt="Wikipedia" width="60%" height="60%" />
                         </a>
                     </li>
                 </ul>
